--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -16,23 +16,23 @@
           </ul>
           <ul class="flex gap30">
             <li>
-              <a href="#">クレディセゾンの強み</a>
+              <a href="#" class="font-15px">クレディセゾンの強み</a>
             </li>
             <li>
-              <a href="#">中小企業様向け</a>
+              <a href="#" class="font-15px">中小企業様向け</a>
             </li>
             <li>
-              <a href="#">個人事業主様向け</a>
+              <a href="#" class="font-15px">個人事業主様向け</a>
             </li>
             <li class="nav__item__dropdown__search">
-              <a href="#">目的から探す</a>
+              <a href="#" class="font-15px">目的から探す</a>
               <svg xmlns="http://www.w3.org/2000/svg" width="10.287" height="10.287" viewBox="0 0 10.287 10.287">
                 <path id="Path_1216" data-name="Path 1216" d="M6.274,0V6.274H0" transform="translate(5.143) rotate(45)"
                   fill="none" stroke="#0497b5" stroke-width="2" />
               </svg>
             </li>
             <li class="nav__item__dropdown__support">
-              <a href="#">サポート情報</a>
+              <a href="#" class="font-15px">サポート情報</a>
               <svg xmlns="http://www.w3.org/2000/svg" width="10.287" height="10.287" viewBox="0 0 10.287 10.287">
                 <path id="Path_1216" data-name="Path 1216" d="M6.274,0V6.274H0" transform="translate(5.143) rotate(45)"
                   fill="none" stroke="#0497b5" stroke-width="2" />
