--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -32,36 +32,52 @@
     <div class="search-block">
       <div class="grid-container">
         <div class="grid-item">
-          <p class="grid-item__title">個人与信型ビジネスカード</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">個人与信型ビジネスカード</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">法人与信型ビジネスカード</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">法人与信型ビジネスカード</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">支払い.com</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">支払い.com</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">セゾンインボイス </p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">セゾンインボイス </p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">セゾンフクリコ</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">セゾンフクリコ</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">ビジネスサポートローン</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">ビジネスサポートローン</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">Concur Expense</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">Concur Expense</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
         <div class="grid-item">
-          <p class="grid-item__title">CosPro</p>
-          <img src="/assets/img/common/arrow-down.svg">
+          <a href="#">
+            <p class="grid-item__title">CosPro</p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </a>
         </div>
       </div>
     </div>
@@ -89,7 +105,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div ><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+                <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="#" class="card">
