--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -331,27 +331,31 @@
         <div class="containers">
           <ul class="inherit card-list">
             <div class="card-type10">
-              <div class="flex fS grid__card--cat">
-                <span class="cat">ビジネスカード</span>
-              </div>
-              <h4 class="ttl-quaternary">最強のコスパとマイル還元率です。</h4>
-              <h5 class="ttl-quinary">truck LLC/代表/善利光雅 様</h5>
-              <h6 class="ttl-senary">
-                ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・
-              </h6>
-              <a href="#" class="bondi_blue_outline_btn">インタビューの続きを見る</a >
+              <a href="#" class="card-type10-container">
+                <div class="flex fS grid__card--cat">
+                  <span class="cat">ビジネスカード</span>
+                </div>
+                <h4 class="ttl-quaternary">最強のコスパとマイル還元率です。</h4>
+                <h5 class="ttl-quinary">truck LLC/代表/善利光雅 様</h5>
+                <h6 class="ttl-senary">
+                  ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・
+                </h6>
+                <div class="bondi_blue_outline_btn">インタビューの続きを見る</div >
+              </a>
             </div>
             <div class="card-type10">
-              <div class="flex fS grid__card--cat">
-                <span class="cat">支払い.com</span>
-              </div>
-              <h4 class="ttl-quaternary">
-                コメントが入ります。コメントが入ります。コメントが入ります。
-              </h4>
-              <h5 class="ttl-quinary">建設業 代表 様</h5>
-              <h6 class="ttl-senary">
-                月末の職人への支払いに迫られ本当に困っていましたが、圧倒的に簡単に振込が完了し、手数料も安かったので大変助かりました。また利用させていただきます。
-              </h6>
+              <a href="#" class="card-type10-container">
+                <div class="flex fS grid__card--cat">
+                  <span class="cat">支払い.com</span>
+                </div>
+                <h4 class="ttl-quaternary">
+                  コメントが入ります。コメントが入ります。コメントが入ります。
+                </h4>
+                <h5 class="ttl-quinary">建設業 代表 様</h5>
+                <h6 class="ttl-senary">
+                  月末の職人への支払いに迫られ本当に困っていましたが、圧倒的に簡単に振込が完了し、手数料も安かったので大変助かりました。また利用させていただきます。
+                </h6>
+              </a>
             </div>
           </ul>
         </div>
