--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1236,6 +1236,10 @@
 
   .bondi_blue_outline_btn {
     width: 100%;
+    font-weight: 700;
+    &:hover {
+      color: $white-color;
+    }
   }
 }
 
