--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -65,6 +65,7 @@
         width: 100%;
         padding: 0;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.11);
+        transition: all .3s;
 
         .card--img {
           position: relative;
@@ -128,6 +129,9 @@
               display: block;
             }
           }
+        }
+        &:hover {
+          opacity: 1;
         }
       }
     }
