--- a/app/assets/scss/3-modules/_heading.scss
+++ b/app/assets/scss/3-modules/_heading.scss
@@ -4,83 +4,96 @@
   ----------------
 */
 .ttl-primary {
-	font-size: 40px;
-	font-weight: 700;
-	line-height: 1.5;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.5;
   text-align: center;
-	margin-bottom: 40px;
-	@media #{$sp} {
-		font-size: 24px;
-		margin-bottom: 20px;
-	}
+  margin-bottom: 40px;
+  @media #{$sp} {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
   &.cW {
     color: #fff;
   }
 }
 
 .ttl-secondary {
-	font-size: 36px;
-	font-weight: 700;
-	line-height: 1.5;
-	text-align: center;
-	margin-bottom: 40px;
-	@media #{$sp} {
-		font-size: 20px;
-		margin-bottom: 20px;
-	}
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 40px;
+  @media #{$sp} {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
   &.cW {
     color: #fff;
   }
 }
 
 .ttl-tertiary {
-	font-size: 20px;
-	font-weight: 700;
-	margin-bottom: 30px;
-	@media #{$sp} {
-		font-size: 16px;
-		margin-bottom: 15px;
-	}
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  @media #{$sp} {
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
   &.cW {
     color: #fff;
   }
 }
 
 .ttl-quaternary {
-	font-size: 16px;
-	font-weight: 700;
-	margin-bottom: 30px;
-	@media #{$sp} {
-		font-size: 16px;
-		margin-bottom: 15px;
-	}
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  @media #{$sp} {
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
+  &.cW {
+    color: #fff;
+  }
+}
+
+.ttl-header {
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 1.5;
+  text-align: center;
+  @media #{$sp} {
+    font-size: 24px;
+  }
   &.cW {
     color: #fff;
   }
 }
 
 .lead {
-	font-size: 18px;
-	font-weight: 500;
-	text-align: center;
-	margin-bottom: 30px;
-	@media #{$sp} {
-		font-size: 14px;
-		margin-bottom: 15px;
-	}
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 30px;
+  @media #{$sp} {
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
   &.cW {
     color: #fff;
   }
 }
 
 .note {
-	font-size: 12px;
+  font-size: 12px;
 }
 
 .ttl-notice {
-	color: $blue-color;
-	font-size: 14px;
-	font-weight: bold;
-	text-transform: uppercase;
-	text-align: center;
+  color: $blue-color;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
 }
