--- a/app/pages/seminar_form/index.njk
+++ b/app/pages/seminar_form/index.njk
@@ -27,7 +27,7 @@
 <main class="seminar-form-page form-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h2 class="ttl-secondary">セミナー動画視聴申込</h2>
+      <h1 class="ttl-header">セミナー動画視聴申込</h1>
     </div>
   </section>
 
