--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -16,13 +16,13 @@
           </ul>
           <ul class="flex gap30">
             <li>
-              <a href="#" class="font-15px">クレディセゾンの強み</a>
+              <a href="/strength" class="font-15px">クレディセゾンの強み</a>
             </li>
             <li>
-              <a href="#" class="font-15px">中小企業様向け</a>
+              <a href="/smaller_companies" class="font-15px">中小企業様向け</a>
             </li>
             <li>
-              <a href="#" class="font-15px">個人事業主様向け</a>
+              <a href="/sole_proprietorship" class="font-15px">個人事業主様向け</a>
             </li>
             <li class="nav__item__dropdown__search">
               <a href="#" class="font-15px">目的から探す</a>
@@ -51,19 +51,12 @@
       </div>
     </div>
   </div>
+
   <div class="nav__dropdown__list__search pc-only">
-    <div class="nav__dropdown__search">
-      <div class="nav__dropdown__search__container">
-        <div class="nav__dropdown__search__title">目的から探す</div>
-        <a class="bondi_blue_outline_btn">
-          <span class="bondi_blue_outline_btn__tittle">サービス一覧を見る</span>
-        </a>
-      </div>
-    </div>
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
-          <a href="#">
+          <a href="/business_card_creation">
             <span>ビジネスカードを作りたい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -75,7 +68,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/business_efficency">
             <span>業務を効率化したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -87,7 +80,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/welfare">
             <span>福利厚生を充実させたい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -101,7 +94,7 @@
       </ul>
       <ul class="nav__dropdown__list__secondary">
         <li>
-          <a href="#">
+          <a href="/reduction_expenses">
             <span>経費を削減したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -113,7 +106,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/improve_cash_flow">
             <span>資金繰りを改善したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -127,6 +120,7 @@
       </ul>
     </div>
   </div>
+
   <div class="nav__dropdown__list__support pc-only">
     <div class="nav__dropdown__search">
       <div class="nav__dropdown__search__container">
@@ -136,7 +130,7 @@
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
-          <a href="#">
+          <a href="/whitepaper_list">
             <span>お役立ちコラム</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -148,7 +142,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/case_list">
             <span>導入事例</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -162,7 +156,7 @@
       </ul>
       <ul class="nav__dropdown__list__secondary">
         <li>
-          <a href="#">
+          <a href="/faq_list">
             <span>よくある質問</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -176,54 +170,174 @@
       </ul>
     </div>
   </div>
+
   <div class="nav__dropdown__sp sp-only">
     <ul>
       <li>
-        <a href="#">
+        <a href="/strength">
           <span>クレディセゾンの強み</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
-          </svg>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="/smaller_companies">
           <span>中小企業様向け</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
-          </svg>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="/sole_proprietorship">
           <span>個人事業主様向け</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
-          </svg>
         </a>
       </li>
-      <li>
-        <a href="#">
+      <li class="nav__item__dropdown__search">
+        <a>
           <span>目的から探す</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0" transform="translate(0 7.924) rotate(-45)"
+              fill="none" stroke="#0497b5" stroke-width="3" />
           </svg>
         </a>
       </li>
-      <li>
-        <a href="#">
+      <li class="nav__item__dropdown__support">
+        <a>
           <span>サポート情報</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0" transform="translate(0 7.924) rotate(-45)"
+              fill="none" stroke="#0497b5" stroke-width="3" />
           </svg>
         </a>
       </li>
     </ul>
+  </div>
+
+  <div class="nav__dropdown__list__search sp-only">
+    <div class="nav__dropdown__list">
+      <ul class="nav__dropdown__list__first">
+        <li>
+          <a href="/business_card_creation">
+            <span>ビジネスカードを作りたい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="/business_efficency">
+            <span>業務を効率化したい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="/welfare">
+            <span>福利厚生を充実させたい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a href="/reduction_expenses">
+            <span>経費を削減したい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="/improve_cash_flow">
+            <span>資金繰りを改善したい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <div class="nav__dropdown__back">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 9.198 9.679">
+          <g id="矢印アイコン_左3" data-name="矢印アイコン　左3" transform="translate(22.934) scale(-1, 1)">
+            <path id="Path_43786" data-name="Path 43786"
+              d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z" fill="#00758c" />
+          </g>
+        </svg>
+      </div>
+    </div>
+  </div>
+
+  <div class="nav__dropdown__list__support sp-only">
+    <div class="nav__dropdown__list">
+      <ul class="nav__dropdown__list__first">
+        <li>
+          <a href="/whitepaper_list">
+            <span>お役立ちコラム</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a href="/case_list">
+            <span>導入事例</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a href="/faq_list">
+            <span>よくある質問</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <div class="nav__dropdown__back">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 9.198 9.679">
+          <g id="矢印アイコン_左3" data-name="矢印アイコン　左3" transform="translate(22.934) scale(-1, 1)">
+            <path id="Path_43786" data-name="Path 43786"
+              d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z" fill="#00758c" />
+          </g>
+        </svg>
+      </div>
+    </div>
   </div>
 
   {# This is for preventing all min js errors #}
