--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -507,7 +507,7 @@
     <div class="sec-news">
       <div class="containers">
         <div class="sec-news__box">
-          <a href="#">
+          <a href="#" class="sec-news__box__container">
             <dl class="flex aiC sec-news__box--item">
               <dt class="flex aiC sp-fS">
                 <time class="time">2022.9.20</time>
@@ -518,7 +518,7 @@
           </a>
         </div>
         <div class="sec-news__box">
-          <a href="#">
+          <a href="#" class="sec-news__box__container"></a>
             <dl class="flex aiC sec-news__box--item">
               <dt class="flex aiC sp-fS">
                 <time class="time">2022.9.20</time>
@@ -529,7 +529,7 @@
           </a>
         </div>
         <div class="sec-news__box">
-          <a href="#">
+          <a href="#" class="sec-news__box__container"></a>
             <dl class="flex aiC sec-news__box--item">
               <dt class="flex aiC sp-fS">
                 <time class="time">2022.9.20</time>
@@ -540,7 +540,7 @@
           </a>
         </div>
         <div class="sec-news__box">
-          <a href="#">
+          <a href="#" class="sec-news__box__container"></a>
             <dl class="flex aiC sec-news__box--item">
               <dt class="flex aiC sp-fS">
                 <time class="time">2022.9.20</time>
@@ -551,7 +551,7 @@
           </a>
         </div>
         <div class="sec-news__box">
-          <a href="#">
+          <a href="#" class="sec-news__box__container"></a>
             <dl class="flex aiC sec-news__box--item">
               <dt class="flex aiC sp-fS">
                 <time class="time">2022.9.20</time>
