--- a/app/pages/news_list/index.njk
+++ b/app/pages/news_list/index.njk
@@ -29,67 +29,85 @@ link:"#"
       <div class="section-subtitle">クレディセゾンのサービスに関するニュース・更新情報</div>
       <div class="section-list">
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
         <div class="list-item">
-          <div class="item-header">
-            <div class="item-date">2021.3.8</div>
-            <div class="item-tag">カテゴリ名</div>
-          </div>
-          <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          <a href="#">
+            <div class="item-header">
+              <div class="item-date">2021.3.8</div>
+              <div class="item-tag">カテゴリ名</div>
+            </div>
+            <div class="item-title">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトル</div>
+          </a>
         </div>
       </div>
     </div>
