--- a/app/assets/scss/4-pages/_news_detail.scss
+++ b/app/assets/scss/4-pages/_news_detail.scss
@@ -30,20 +30,23 @@
       min-width: 330px;
       background: #f5f5f5 0% 0% no-repeat padding-box;
       border-top: 4px solid #0497b5;
-      padding: 17px 30px 0 30px;
       .ttl-tertiary {
         text-align: center;
         font-size: 20px;
         line-height: 36px;
         margin-bottom: 0;
+        padding: 17px 0 10px 0;
       }
       .catSearch__list {
         li {
+          padding: 10px 20px;
+          border-bottom: 1px solid #ddd;
           a {
-            padding: 18px 0 18px 20px;
             font-size: 16px;
             line-height: 28px;
             color: #111111;
+            padding-left: 40px;
+            border-bottom: none;
             &:before {
               left: 0px;
               width: 6px;
@@ -52,16 +55,19 @@
               border-style: solid;
               border-width: 2px;
             }
-            &:hover {
-              padding: 18px 0 18px 25px;
-              background: none;
-              &:before {
-                left: 5px;
+          }
+          &:last-child {
+            border-bottom: none;
+          }
+          &:hover {
+            background-color: $blue-color;
+            a {
+              color: $white-color;
+              background-color: transparent;
+              &::before {
+                border-color: #fff #fff rgba(0,0,0,0) rgba(0,0,0,0);
               }
             }
-          }
-          &:last-child a {
-            border-bottom: none;
           }
         }
       }
