fix slide toggle

--- a/app/pages/catalog_detail/index.njk
+++ b/app/pages/catalog_detail/index.njk
@@ -42,7 +42,11 @@
           <h2 class="title">本資料の目次</h2>
           <ul class="doccument-list">
             {% for i in range(1, 9) %}
-              <li class="document-item">章タイトルが入ります。章タイトルが入ります。章タイトルが入ります。</li>
+              <li class="document-item">
+                <a href="#">
+                  章タイトルが入ります。章タイトルが入ります。章タイトルが入ります。
+                </a>
+              </li>
             {% endfor %}
           </ul>
         </div>
