--- a/app/assets/scss/4-pages/_faq_service_list.scss
+++ b/app/assets/scss/4-pages/_faq_service_list.scss
@@ -95,7 +95,7 @@
         display: flex;
       }
       .answer__content {
-        display: flex;
+        display: none;
         margin-top: 10px;
       }
       .QA__content-head {
