--- a/app/assets/scss/4-pages/_personal.scss
+++ b/app/assets/scss/4-pages/_personal.scss
@@ -317,7 +317,7 @@
       background-color: #ffffff;
       margin-top: -30px;
       padding: 0 60px 0 30px;
-      transition: 0.2s ease-in-out;
+      display: none;
 
       .qa-marker {
         color: $green-color-1;
