--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -364,82 +364,46 @@
     <section class="section-question-and-answer">
       <h5 class="ttl-sub">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
-      <div class="flex gap20 question-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">Q</h2>
+      {% for i in range(1, 5) %}
+        <div class="flex gap20 question-tab">
+          <div class="qa-marker">
+            <h2 class="ttl-secondary">Q</h2>
+          </div>
+          <div class="qa-content">
+            <h3 class="ttl-tertiary">
+              質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
+            </h3>
+          </div>
+          <button class="qa-button" for="answer-tab-{{i}}">
+            <span class="svg__plus">{% include 'component/icons/plus.njk' %}</span>
+            <span class="svg__minus">{% include 'component/icons/minus.njk' %}</span>
+          </button>
         </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-          </h3>
+        <div id="answer-tab-{{i}}" class="flex gap20 answer-tab">
+          <div class="qa-marker">
+            <h2 class="ttl-secondary">A</h2>
+          </div>
+          <div class="qa-content">
+            <h3 class="ttl-tertiary">
+              質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。
+            </h3>
+          </div>
         </div>
-        <button class="qa-button">
-          <span class="svg__plus">{% include 'component/icons/plus.njk' %}</span>
-          <span class="svg__minus">{% include 'component/icons/minus.njk' %}</span>
-        </button>
-      </div>
-      <div class="flex gap20 answer-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">A</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。
-          </h3>
-        </div>
-      </div>
-      <div class="flex gap20 question-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">Q</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-          </h3>
-        </div>
-        <button class="qa-button">
-          {% include 'component/icons/plus.njk' %}
-        </button>
-      </div>
-      <div class="flex gap20 question-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">Q</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-          </h3>
-        </div>
-        <button class="qa-button">
-          {% include 'component/icons/plus.njk' %}
-        </button>
-      </div>
-      <div class="flex gap20 question-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">Q</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-          </h3>
-        </div>
-        <button class="qa-button">
-          {% include 'component/icons/plus.njk' %}
-        </button>
-      </div>
-      <div class="flex gap20 question-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">Q</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-          </h3>
-        </div>
-        <button class="qa-button">
-          {% include 'component/icons/plus.njk' %}
-        </button>
-      </div>
+      {% endfor %}
     </section>
   </main>
+
+  <script>
+    $(document).ready(function () {
+      $('.qa-button').on('click', function (e) {
+        e.preventDefault();
+        let $this = $(this);
+        const id_tab = $this.attr("for")
+
+        $this.toggleClass('open')
+        $(`#${id_tab}`).slideToggle();
+        $(`#${id_tab}`).css('display', "flex");
+      });
+    });
+  </script>
 {% endblock %}
