--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -38,7 +38,7 @@
         <div class="containers">
           <ul class="inherit card-list">
             <li class="card-type6">
-              <a href="#" class="card">
+              <a href="#challenge-tax-returns" class="card">
                 <div class="ttl-quaternary-container">
                   <h4 class="ttl-quaternary">確定申告や経費処理が面倒</h4>
                 </div>
@@ -61,7 +61,7 @@
               </a>
             </li>
             <li class="card-type6">
-              <a href="#" class="card">
+              <a href="#challenge-improve-cash" class="card">
                 <div class="ttl-quaternary-container">
                   <h4 class="ttl-quaternary">資金繰りを改善したい</h4>
                 </div>
@@ -112,7 +112,7 @@
     </section>
     <section class="section-secondary">
       <div class="container-1200">
-        <div class="notification-primary">
+        <div id="challenge-tax-returns" class="notification-primary">
           <div class="notification-panel1">
             <h2 class="card__ttl">課題：確定申告や経費処理が面倒</h2>
             <summary class="flex gap30 aiC inquiry__box">
@@ -211,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div class="notification-secondary">
+        <div id="challenge-improve-cash" class="notification-secondary">
           <div class="notification-panel1">
             <h2 class="card__ttl">課題：資金繰りを改善したい</h2>
             <summary class="flex gap30 aiC inquiry__box">
@@ -234,7 +234,7 @@
             <a href="#" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a >
           </div>
         </div>
-        <div class="notification-tertiary">
+        <div id="challenge-raise-funds" class="notification-tertiary">
           <div class="notification-panel1">
             <h2 class="card__ttl">課題：資金調達をしたい</h2>
             <summary class="flex gap30 aiC inquiry__box">
