--- a/app/pages/case_detail/index.njk
+++ b/app/pages/case_detail/index.njk
@@ -36,7 +36,7 @@ link:"#"
       <div class="section-welcome--content">
         <h3 class="ttl-tertiary">株式会社サカイ引越センター　様</h3>
 
-        <h2 class="ttl-secondary">ETCカードの導入で毎月の経費計算処理の手間と時間が削減！</h2>
+        <h1 class="ttl-primary">ETCカードの導入で毎月の経費計算処理の手間と時間が削減！</h1>
 
         <a href="#" class="black_pill_btn small show-arrow"><span>ご利用サービス</span> <strong>ETCカード</strong></a>
       </div>
