--- a/app/pages/case_list/index.njk
+++ b/app/pages/case_list/index.njk
@@ -27,7 +27,7 @@
 <main class="case_list-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h2 class="ttl-secondary">中小企業・個人事業主様の導入事例</h2>
+      <h1 class="ttl-primary">中小企業・個人事業主様の導入事例</h1>
 
       <h4 class="ttl-quaternary">さまざまな規模・業種でご利用いただいています。</h4>
     </div>
