--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -24,7 +24,7 @@ link:"news_list"
 
 <main class="catalog-list-page">
   <section class="section-header">
-    <div class="header-title">サービス資料ダウンロード</div>
+    <h1 class="header-title">サービス資料ダウンロード</h1>
     <div class="header-subtitle">クレディセゾンのソリューションの詳細が分かるサービス資料をダウンロードいただけます。</div>
   </section>
   <section class="section-content container">
