--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -27,7 +27,7 @@
 <main class="contact-page form-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h2 class="ttl-secondary">ご相談・お問い合わせ</h2>
+      <h1 class="ttl-primary">ご相談・お問い合わせ</h1>
     </div>
   </section>
 
