--- a/app/pages/contact_thanks/index.njk
+++ b/app/pages/contact_thanks/index.njk
@@ -20,7 +20,7 @@
 <main class="contact-thanks-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h2 class="ttl-secondary">ご相談・お問い合わせありがとうございます。</h2>
+      <h1 class="ttl-primary">ご相談・お問い合わせありがとうございます。</h1>
 
       <h3 class="ttl-tertiary"><strong>2営業日以内に</strong> <span>担当者より連絡させていただきます。 <br>
           もうしばらくお待ちください。</span></h3>
