--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -22,7 +22,7 @@
     <div class="container-1200">
       <h3 class="ttl-tertiary">法人経営者様・個人事業主様へ。</h3>
 
-      <h2 class="ttl-secondary">資金繰り・資金調達をサポートするサービス</h2>
+      <h1 class="ttl-primary">資金繰り・資金調達をサポートするサービス</h1>
 
       <h4 class="ttl-quaternary">クレディセゾンは、資金繰り改善や資金調達をもっと手軽に実現できる、<br>
         サ－ビスをご提供いたします。</h4>
