--- a/app/pages/news_category/index.njk
+++ b/app/pages/news_category/index.njk
@@ -29,7 +29,7 @@ link:"#"
 <main class="news_category-page">
   <section class="section-new containers flex">
     <div class="section-main">
-      <div class="section-title">○○○○（カテゴリ名）に関するお知らせ</div>
+      <h1 class="section-title">○○○○（カテゴリ名）に関するお知らせ</h1>
 
       <div class="section-list">
         <div class="list-item">
