--- a/app/pages/news_list/index.njk
+++ b/app/pages/news_list/index.njk
@@ -25,7 +25,7 @@ link:"#"
 <main class="news_list-page">
   <section class="section-new containers flex">
     <div class="section-main">
-      <div class="section-title">ニュース</div>
+      <h1 class="section-title">ニュース</h1>
       <div class="section-subtitle">クレディセゾンのサービスに関するニュース・更新情報</div>
       <div class="section-list">
         <div class="list-item">
