--- a/app/pages/no14/index.njk
+++ b/app/pages/no14/index.njk
@@ -22,7 +22,7 @@
     <div class="container-1200">
       <h3 class="ttl-tertiary">経費清算・請求・出張手配まで。</h3>
 
-      <h2 class="ttl-secondary">業務効率化をサポートするサービス</h2>
+      <h1 class="ttl-primary">業務効率化をサポートするサービス</h1>
 
       <h4 class="ttl-quaternary">クレディセゾンは中小企業様・個人事業主様向けに、<br>
         今すぐ始められて効果を生み出す業務効率化サービスをご提供いたします。</h4>
