--- a/app/pages/reduction_expenses/index.njk
+++ b/app/pages/reduction_expenses/index.njk
@@ -22,7 +22,7 @@
     <div class="container-1200">
       <h3 class="ttl-tertiary">様々な間接コストを削減！</h3>
 
-      <h2 class="ttl-secondary">経費削減をサポートするサービス</h2>
+      <h1 class="ttl-primary">経費削減をサポートするサービス</h1>
 
       <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
         最適なビジネスカードをご用意しています</h4>
