--- a/app/pages/seminar_detail/index.njk
+++ b/app/pages/seminar_detail/index.njk
@@ -30,7 +30,7 @@
   <section class="section-welcome">
     <div class="container-1200">
       <div class="section-content">
-        <h2 class="ttl-secondary">法改正を前にした今やるべき経理のデジタル化とは？</h2>
+        <h1 class="ttl-primary">法改正を前にした今やるべき経理のデジタル化とは？</h1>
 
         <div class="section-img">
           <img src="/assets/img/common/img-seminar-detail-01.png" alt="">
