--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -26,7 +26,7 @@
 <main class="strength-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h2 class="ttl-secondary">クレディセゾンの強み</h2>
+      <h1 class="ttl-primary">クレディセゾンの強み</h1>
 
       <h3 class="ttl-tertiary">クレディセゾンはビジネス分野においても45万社以上のお客様に選ばれ続けています。 <br>その理由は「お客様起点」のコンサルティングとサポートにあります。 </h3>
     </div>
