--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -22,7 +22,7 @@
     <div class="container-1200">
       <h3 class="ttl-tertiary">人材の定着・従業員のモチベーションUPに。</h3>
 
-      <h2 class="ttl-secondary">福利厚生を充実できるサービス</h2>
+      <h1 class="ttl-primary">福利厚生を充実できるサービス</h1>
 
       <h4 class="ttl-quaternary">クレディセゾンは、従業員のみなさまの暮らしに役立つ様々なサービスを、<br>
         最大66％OFFで利用できるお得な福利厚生優待サービスをご提供しています。</h4>
