--- a/app/pages/whitepaper_thanks/index.njk
+++ b/app/pages/whitepaper_thanks/index.njk
@@ -14,13 +14,13 @@
 {# Custom tags before </body> #}
 {% block customJs %}{% endblock %}
 
-{# Main content #} 
+{# Main content #}
 {% block content %}
 
 <main class="whitepaper-thanks-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h2 class="ttl-secondary">資料のダウンロードありがとうございます。</h2>
+      <h1 class="ttl-primary">資料のダウンロードありがとうございます。</h1>
 
       <div class="ttl-tertiary">メールアドレス宛に資料ダウンロード用のURLを送信いたしました。<br>すぐに読むことができますので、ぜひご覧ください！</div>
 
