--- a/app/assets/scss/4-pages/_business_card_creation.scss
+++ b/app/assets/scss/4-pages/_business_card_creation.scss
@@ -6,7 +6,7 @@
     text-align: left;
     background-color: #f7f7f7;
 
-    .ttl-secondary {
+    .ttl-primary {
       font-size: 42px;
       margin-bottom: 31px;
       text-align: left;
