--- a/app/assets/scss/4-pages/_case_detail.scss
+++ b/app/assets/scss/4-pages/_case_detail.scss
@@ -35,7 +35,7 @@
           width: 100%;
         }
 
-        .ttl-secondary {
+        .ttl-primary {
           font-size: 42px;
           margin-bottom: 28px;
           line-height: 1.4;
