--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -15,7 +15,7 @@
       padding: 50px 10px;
     }
 
-    .ttl-secondary {
+    .ttl-primary {
       font-size: 42px;
       margin-bottom: 31px;
       line-height: 1;
