--- a/app/assets/scss/4-pages/_catalog_thanks.scss
+++ b/app/assets/scss/4-pages/_catalog_thanks.scss
@@ -22,7 +22,7 @@
       height: auto;
     }
 
-    .ttl-secondary {
+    .ttl-primary {
       font-size: 32px;
       text-align: center;
       margin-bottom: 31px;
