--- a/app/assets/scss/4-pages/_seminar_detail.scss
+++ b/app/assets/scss/4-pages/_seminar_detail.scss
@@ -30,7 +30,7 @@
           position: absolute;
         }
 
-        .ttl-secondary {
+        .ttl-primary {
           font-size: 32px;
           margin-bottom: 30px;
           text-align: left;
