--- a/app/assets/scss/4-pages/_strength.scss
+++ b/app/assets/scss/4-pages/_strength.scss
@@ -18,7 +18,7 @@
     .container-1200 {
       align-items: center;
 
-      .ttl-secondary {
+      .ttl-primary {
         font-size: 42px;
         margin-bottom: 38px;
 
