--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -22,7 +22,7 @@
       <div class="container-1200">
         <h3 class="ttl-tertiary">自分に合ったビジネスカードを。</h3>
 
-        <h2 class="ttl-secondary">クレディセゾンのビジネスカード</h2>
+        <h1 class="ttl-primary">クレディセゾンのビジネスカード</h1>
 
         <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
           最適なビジネスカードをご用意しています。</h4>
