--- a/app/pages/catalog_thanks/index.njk
+++ b/app/pages/catalog_thanks/index.njk
@@ -20,7 +20,7 @@
 <main class="catalog-thanks-page">
    <section class="section-welcome">
       <div class="container-1200">
-         <h2 class="ttl-secondary">資料のダウンロードありがとうございます。</h2>
+         <h1 class="ttl-primary">資料のダウンロードありがとうございます。</h1>
          <div class="ttl-tertiary">メールアドレス宛に資料ダウンロード用のURLを送信いたしました。<br>
             すぐに読むことができますので、ぜひご覧ください！
          </div>
